--- a/app/src/main/res/layout/fragment_on_boarding_logofinal.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_logofinal.xml
@@ -8,10 +8,12 @@
             android:layout_marginRight="30dp"
             android:layout_marginBottom="200dp"-->
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:visibility="invisible"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
+        android:id="@+id/logoonboarding"
         android:src="@drawable/ic_logo" />
     <!--    -->
 
