--- a/app/src/main/res/layout/fragment_on_boarding_vision.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_vision.xml
@@ -10,6 +10,8 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="130dp"
+        android:id="@+id/visionLayout"
+        android:visibility="invisible"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:orientation="vertical">
