--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:visibility="gone"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/logoonboarding1"
@@ -53,7 +53,7 @@
                     android:layout_toEndOf="@id/profileiconet"
                     android:layout_toRightOf="@id/profileiconet"
                     android:background="@drawable/bg_registration_edittext"
-                    android:fontFamily="monospace"
+                    android:fontFamily="@font/helvetica_world_italic"
                     android:hint="Enter Username"
                     android:inputType="textPersonName"
                     android:paddingStart="25dp"
@@ -90,6 +90,7 @@
                     android:layout_toEndOf="@id/profileiconet1"
                     android:layout_toRightOf="@id/profileiconet1"
                     android:background="@drawable/bg_registration_edittext"
+                    android:fontFamily="@font/helvetica_world_italic"
                     android:hint="Enter Password"
                     android:inputType="textPassword"
                     android:paddingStart="25dp"
@@ -98,7 +99,6 @@
                     android:paddingEnd="25dp"
                     android:paddingRight="25dp"
                     android:paddingBottom="10dp"
-                    android:fontFamily="monospace"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textStyle="italic" />
@@ -118,9 +118,9 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginRight="15dp"
                     android:background="@drawable/bg_on_board_btn"
+                    android:fontFamily="@font/helvetica_world_regular"
                     android:paddingStart="20dp"
                     android:paddingLeft="20dp"
-                    android:fontFamily="serif-monospace"
                     android:paddingEnd="20dp"
                     android:paddingRight="20dp"
                     android:text="sign in"
@@ -134,9 +134,9 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/bg_on_board_btn_white"
+                    android:fontFamily="@font/helvetica_world_regular"
                     android:paddingStart="20dp"
                     android:paddingLeft="20dp"
-                    android:fontFamily="serif-monospace"
                     android:paddingEnd="20dp"
                     android:paddingRight="20dp"
                     android:text="sign up"
