--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -54,6 +54,7 @@
                     android:layout_toRightOf="@id/profileiconet"
                     android:background="@drawable/bg_registration_edittext"
                     android:fontFamily="@font/helvetica_world_italic"
+                    android:gravity="center_vertical"
                     android:hint="Enter Username"
                     android:inputType="textPersonName"
                     android:paddingStart="25dp"
@@ -91,6 +92,7 @@
                     android:layout_toRightOf="@id/profileiconet1"
                     android:background="@drawable/bg_registration_edittext"
                     android:fontFamily="@font/helvetica_world_italic"
+                    android:gravity="center_vertical"
                     android:hint="Enter Password"
                     android:inputType="textPassword"
                     android:paddingStart="25dp"
@@ -115,10 +117,12 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginEnd="15dp"
                     android:layout_marginRight="15dp"
                     android:background="@drawable/bg_on_board_btn"
                     android:fontFamily="@font/helvetica_world_regular"
+                    android:gravity="center"
                     android:paddingStart="20dp"
                     android:paddingLeft="20dp"
                     android:paddingEnd="20dp"
@@ -131,10 +135,12 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/bg_on_board_btn_white"
                     android:fontFamily="@font/helvetica_world_regular"
+                    android:gravity="center"
                     android:paddingStart="20dp"
                     android:paddingLeft="20dp"
                     android:paddingEnd="20dp"
