--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -115,6 +115,7 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/loginBtnRegistration"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
                     android:layout_gravity="center_vertical"
