--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,8 @@
             android:layout_width="246dp"
             android:layout_height="151dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/rectangle_3" />
+            android:background="@drawable/rectangle_3"
+            android:elevation="10dp" />
 
         <View
             android:id="@+id/line_1"
@@ -44,30 +45,11 @@
             android:text="NEWS"
             android:textSize="30sp" />
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerviewHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/rectangle_1"
-                android:layout_width="151dp"
-                android:layout_height="151dp"
-                android:layout_gravity="start"
-                android:background="@drawable/rectangle_4"
-                android:elevation="4dp" />
-
-            <View
-                android:layout_width="151dp"
-                android:layout_height="151dp"
-                android:layout_gravity="start"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/rectangle_4"
-                android:elevation="4dp" />
-
-        </LinearLayout>
+            android:layout_margin="15dp" />
 
         <View
             android:layout_width="414dp"
@@ -80,7 +62,8 @@
             android:layout_width="347dp"
             android:layout_height="234dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/rectangle_3" />
+            android:background="@drawable/rectangle_3"
+            android:elevation="10dp" />
 
     </LinearLayout>
 
@@ -98,7 +81,7 @@
         android:layout_height="43dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/rectangle_2"
-        android:elevation="7dp">
+        android:elevation="10dp">
 
         <ImageView
             android:layout_width="15dp"
