--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="55dp"
         android:layout_below="@id/groove_4x_1">
 
         <LinearLayout
@@ -259,16 +258,20 @@
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="55dp"/>
+
         </LinearLayout>
 
     </ScrollView>
 
     <ImageView
-        android:layout_width="16dp"
-        android:layout_height="19dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="20dp"
+        android:layout_margin="15dp"
         android:src="@drawable/ic_night_black" />
 
     <RelativeLayout
@@ -276,12 +279,12 @@
         android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/rectangle_2"
+        android:background="@drawable/bg_mainb_bottom_white"
         android:elevation="10dp">
 
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
@@ -291,14 +294,14 @@
 
         <ImageView
             android:id="@+id/middlebtn"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_search_black" />
 
         <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
