--- a/app/src/main/res/drawable-night/bg_mainb_bottom.xml
+++ b/app/src/main/res/drawable-night/bg_mainb_bottom.xml
@@ -7,7 +7,7 @@
 
             <solid android:color="#555555"/>
             <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
-            <stroke android:color="@color/grey" android:width="2dp"/>
+            <stroke android:color="#8F8E8E" android:width="2dp"/>
 
         </shape>
 
