--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,14 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_main_screen"
+    android:clipToPadding="false"
     tools:context=".HomeActivity">
 
-    <ImageView
+    <RelativeLayout
         android:id="@+id/groove_4x_1"
-        android:layout_width="59dp"
-        android:layout_height="54dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_logo_green" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="59dp"
+            android:layout_height="54dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_logo_green" />
+
+        <ImageView
+            android:id="@+id/nightmodeimage"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/ic_night_mode" />
+
+
+    </RelativeLayout>
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -36,8 +56,7 @@
                     android:layout_width="246dp"
                     android:layout_height="151dp"
                     android:layout_marginTop="15dp"
-                    android:background="@drawable/rectangle_3"
-                    android:elevation="10dp" />
+                    android:background="@drawable/rectangle_3" />
 
                 <View
                     android:id="@+id/line_1"
@@ -262,21 +281,14 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="55dp"/>
+                android:layout_height="55dp" />
 
         </LinearLayout>
 
     </ScrollView>
 
-    <ImageView
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:id="@+id/nightmodeimage"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="15dp"
-        android:src="@drawable/ic_night_mode" />
 
+    <!---->
     <RelativeLayout
         android:id="@+id/rectangle_2"
         android:layout_width="match_parent"
@@ -286,13 +298,13 @@
         android:elevation="10dp">
 
         <ImageView
+            android:id="@+id/homeiconimage"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/middlebtn"
-            android:id="@+id/homeiconimage"
             android:layout_toLeftOf="@id/middlebtn"
             android:src="@drawable/ic_home" />
 
@@ -304,9 +316,9 @@
             android:src="@drawable/ic_search" />
 
         <ImageView
+            android:id="@+id/profileiconimage"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:id="@+id/profileiconimage"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
