--- a/app/src/main/res/drawable/rectangle_8.xml
+++ b/app/src/main/res/drawable/rectangle_8.xml
@@ -3,8 +3,9 @@
 <item>
     <shape android:shape="rectangle">
         <solid android:color="@color/white"/>
-        <stroke android:color="#5e5e5e" android:width="2dp"/>
+        <stroke android:color="#909090" android:width="2dp"/>
         <corners android:radius="37dp"/>
+<!--        A95E5E5E-->
     </shape>
 </item>
 </selector>
