--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_screen"
     android:layout_width="match_parent"
@@ -14,20 +15,19 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="59dp"
-            android:layout_height="54dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_logo_green" />
 
         <ImageView
             android:id="@+id/nightmodeimage"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_night_mode" />
 
 
@@ -42,45 +42,49 @@
         android:layout_below="@id/groove_4x_1" />
 
 
-    <!---->
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/rectangle_2"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        android:outlineProvider="bounds"
-        android:elevation="20dp">
+        android:layout_marginBottom="-14dp"
+        android:background="@drawable/bg_mainb_bottom"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="7dp">
 
-        <ImageView
-            android:id="@+id/homeiconimage"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/middlebtn"
-            android:layout_toLeftOf="@id/middlebtn"
-            android:src="@drawable/ic_home" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_marginBottom="14dp">
 
-        <ImageView
-            android:id="@+id/middlebtn"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_search" />
+            <ImageView
+                android:id="@+id/homeiconimage"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/middlebtn"
+                android:layout_toLeftOf="@id/middlebtn"
+                android:src="@drawable/ic_home_selected" />
 
-        <ImageView
-            android:id="@+id/profileiconimage"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/middlebtn"
-            android:layout_toRightOf="@id/middlebtn"
-            android:src="@drawable/ic_profile_home" />
+            <ImageView
+                android:id="@+id/middlebtn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_search_unselected" />
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/profileiconimage"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/middlebtn"
+                android:src="@drawable/ic_profile_unselected" />
 
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
