--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
+    <color name="searchresulttext">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="darkBlue">#292f47</color>
     <color name="lightBlue">#303751</color>
