--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="searchresulttext">#c3c1c1</color>
+    <color name="searchresulttext">#f2efef</color>
 
 </resources>
